typescript/checker/tests/conformance/parser/ecmascript5/ArrowFunctionExpressions/parserArrowFunctionExpression4.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            16,
        ),
        hi: BytePos(
            17,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/ArrowFunctionExpressions/parserArrowFunctionExpression4.ts:1:17
  |
1 | a = (() => { }, a)
  |                 ^

